# Nomos

./: .gitignore  .ocamlinit  Arith.ml  Arith.mli  Ast.ml  Ast.mli  BUILD.md  CODE_OF_CONDUCT.md  Cost.ml  Cost.mli  Elab.ml  Elab.mli  ErrorMsg.ml  ErrorMsg.mli  Exec.ml  Exec.mli  Flags.ml  Flags.mli  LICENSE.md  Lex.ml  Lex.mli  Makefile  Mark.ml  Mark.mli  Parse.ml  Parse.mli  Parsestate.ml  Parsestate.mli  Pprint.ml  Pprint.mli  README.md  Rast.ml  RastConfig.ml  RastConfig.mli  Regression.ml  SafeIO.mli  Terminal.ml  Terminal.mli  TokStream.ml  TokStream.mli  (+10 more)
DistAlg/: ring_leader_election.nom
OcamlParGen/: .ast.ml.swp  Makefile  README.md  ast.ml  evaluate.ml  infer.ml  lexer.mll  main.ml  parser.mly  print.ml  test.ml  typecheck.ml  unify.ml
UC-tests/: bracha-ideal-func.nom  bracha_broadcast.nom  commit-illtyped.nom  commitment.nom  uc-bracha-backup.nom  uc-bracha.nom
clp/: dune
combined/: Arith.ml  Ast.ml  Ast.mli  Cost.ml  Cost.mli  Elab.ml  Elab.mli  ErrorMsg.ml  ErrorMsg.mli  Flags.ml  Infer.ml  Infer.mli  Makefile  Mark.ml  Nomos.ml  NomosConfig.ml  NomosConfig.mli  Normalize.ml  Parser.mly  Pprint.ml  Pprint.mli  TpError.ml  TpError.mli  Typecheck.ml  Typecheck.mli  append.nom  auction-demo.nom  auction-dict.nom  auction.nom  bank-account.nom  dict-money.nom  dictionary.nom  dune  erc20.nom  escrow.nom  lexer.mll  main.ml  parser.mly  puzzle.nom  test.ml  (+3 more)
functional/: a.out  (+11 more)
src/: Arith.ml  Arith.mli  Ast.ml  Ast.mli  Cost.ml  Elab.ml  Elab.mli  Exec.ml  Exec.mli  Infer.ml  Infer.mli  Lex.ml  Normalize.ml  Normalize.mli  Parse.ml  Parse.mli  Pprint.ml  Pprint.mli  Rast.ml  RastConfig.ml  Regression.ml  Solver.ml  Terminal.ml  Terminal.mli  TokStream.ml  TpError.ml  TpError.mli  Typecheck.ml  Typecheck.mli  dune
src/clp/: dune
(+1065 files in other folders)
