opam-version: "2.0"
name: "nomos"
version: "1.0"
maintainer: "ankushd@cs.cmu.edu"
authors: ["Ankush Das, Ishani Santurkar, Frank Pfenning"]
homepage: "https://github.com/ankushdas/Nomos"
bug-reports: "https://github.com/ankushdas/Nomos/issues"
license: "Apache-2.0"
synopsis: "Nomos Implementation"
depends: [
  "dune" {build & >= "1.4.0"}
  "menhir" {>= "20180703"}
  "core" {>= "0.12.1"}
]
build: [
  ["dune" "build" "-p" name "@install" "-j" jobs]
]