opam-version: "2.0"
name: "rast"
version: "0.0"
maintainer: "ankushd@cs.cmu.edu"
authors: ["Ankush Das, Frank Pfenning"]
license: "Apache-2.0"
synopsis: "Resource-Aware Session Types Implementation"
depends: [
  "dune" {build & >= "1.4.0"}
  "menhir" {>= "20180703"}
  "core" {>= "0.12.1"}
]
build: [
  ["dune" "build" "-p" name "@install" "-j" jobs]
]