(executables
 (names rast regression)
 (libraries core)
 (preprocess (pps ppx_let)))

(env
    (dev
      (flags (:standard -warn-error -A))))

(library
 (name            clplib)
 (public_name     clplib)
 (libraries       re lwt)
 (c_names         clp_stubs)
 (c_flags         (-I/clp/include))
 (c_library_flags (-lblah)))